<resources>
    <string name="app_name">PokeApp</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_botnav">BotnavActivity</string>
    <string name="pokemon_image">Pokemon Image</string>
    <string name="form_switchable">Form Switchable :</string>
    <string name="base_happiness">Base Happiness</string>
    <string name="hatch_counter">Hatch Counter</string>
    <string name="base_experience">Base Experience</string>
    <string name="capture_rate">Capture Rate</string>
</resources>